--- a/languages/pony/config.toml
+++ b/languages/pony/config.toml
@@ -9,4 +9,5 @@ brackets = [
     { start = "(", end = ")", close = true, newline = true },
     { start = "\"", end = "\"", close = true, newline = false, not_in = ["string", "comment"] },
 ]
+word_characters = ["'"]
 tab_size = 2
